// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EpicStatusPath /> renders steps from epic status: all tasks complete 1`] = `
<div>
  <div
    class="slds-p-bottom_x-large"
  >
    <div
      class="slds-region_small"
    >
      <div
        class="slds-path"
      >
        <div
          class="slds-grid slds-path__track"
        >
          <ul
            aria-orientation="horizontal"
            class="slds-path__nav"
            role="listbox"
          >
            <li
              class="slds-path__item slds-is-complete"
              role="presentation"
            >
              <a
                aria-selected="false"
                class="slds-path__link progress-bar-item"
                id="path-0"
                role="option"
                tabindex="-1"
              >
                <span
                  class="slds-path__stage"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      class="slds-icon slds-icon_x-small slds-icon-text-default"
                    >
                      <use />
                    </svg>
                  </span>
                  <span
                    class="slds-assistive-text"
                  >
                    Stage Complete
                  </span>
                </span>
                <span
                  class="slds-path__title"
                >
                  Planned
                </span>
              </a>
            </li>
            <li
              class="slds-path__item slds-is-complete"
              role="presentation"
            >
              <a
                aria-selected="false"
                class="slds-path__link progress-bar-item"
                id="path-1"
                role="option"
                tabindex="-1"
              >
                <span
                  class="slds-path__stage"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      class="slds-icon slds-icon_x-small slds-icon-text-default"
                    >
                      <use />
                    </svg>
                  </span>
                  <span
                    class="slds-assistive-text"
                  >
                    Stage Complete
                  </span>
                </span>
                <span
                  class="slds-path__title"
                >
                  In progress
                </span>
              </a>
            </li>
            <li
              class="slds-path__item slds-is-current slds-is-active"
              role="presentation"
            >
              <a
                aria-selected="true"
                class="slds-path__link progress-bar-item"
                id="path-2"
                role="option"
                tabindex="0"
              >
                <span
                  class="slds-path__stage"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      class="slds-icon slds-icon_x-small slds-icon-text-default"
                    >
                      <use />
                    </svg>
                  </span>
                  <span
                    class="slds-assistive-text"
                  >
                    Current Stage:
                  </span>
                </span>
                <span
                  class="slds-path__title"
                >
                  Review
                </span>
              </a>
            </li>
            <li
              class="slds-path__item slds-is-incomplete"
              role="presentation"
            >
              <a
                aria-selected="false"
                class="slds-path__link progress-bar-item"
                id="path-3"
                role="option"
                tabindex="-1"
              >
                <span
                  class="slds-path__stage"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      class="slds-icon slds-icon_x-small slds-icon-text-default"
                    >
                      <use />
                    </svg>
                  </span>
                </span>
                <span
                  class="slds-path__title"
                >
                  Merged
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<EpicStatusPath /> renders steps from epic status: in progress 1`] = `
<div>
  <div
    class="slds-p-bottom_x-large"
  >
    <div
      class="slds-region_small"
    >
      <div
        class="slds-path"
      >
        <div
          class="slds-grid slds-path__track"
        >
          <ul
            aria-orientation="horizontal"
            class="slds-path__nav"
            role="listbox"
          >
            <li
              class="slds-path__item slds-is-complete"
              role="presentation"
            >
              <a
                aria-selected="false"
                class="slds-path__link progress-bar-item"
                id="path-0"
                role="option"
                tabindex="-1"
              >
                <span
                  class="slds-path__stage"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      class="slds-icon slds-icon_x-small slds-icon-text-default"
                    >
                      <use />
                    </svg>
                  </span>
                  <span
                    class="slds-assistive-text"
                  >
                    Stage Complete
                  </span>
                </span>
                <span
                  class="slds-path__title"
                >
                  Planned
                </span>
              </a>
            </li>
            <li
              class="slds-path__item slds-is-current slds-is-active"
              role="presentation"
            >
              <a
                aria-selected="true"
                class="slds-path__link progress-bar-item"
                id="path-1"
                role="option"
                tabindex="0"
              >
                <span
                  class="slds-path__stage"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      class="slds-icon slds-icon_x-small slds-icon-text-default"
                    >
                      <use />
                    </svg>
                  </span>
                  <span
                    class="slds-assistive-text"
                  >
                    Current Stage:
                  </span>
                </span>
                <span
                  class="slds-path__title"
                >
                  In progress
                </span>
              </a>
            </li>
            <li
              class="slds-path__item slds-is-incomplete"
              role="presentation"
            >
              <a
                aria-selected="false"
                class="slds-path__link progress-bar-item"
                id="path-2"
                role="option"
                tabindex="-1"
              >
                <span
                  class="slds-path__stage"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      class="slds-icon slds-icon_x-small slds-icon-text-default"
                    >
                      <use />
                    </svg>
                  </span>
                </span>
                <span
                  class="slds-path__title"
                >
                  Review
                </span>
              </a>
            </li>
            <li
              class="slds-path__item slds-is-incomplete"
              role="presentation"
            >
              <a
                aria-selected="false"
                class="slds-path__link progress-bar-item"
                id="path-3"
                role="option"
                tabindex="-1"
              >
                <span
                  class="slds-path__stage"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      class="slds-icon slds-icon_x-small slds-icon-text-default"
                    >
                      <use />
                    </svg>
                  </span>
                </span>
                <span
                  class="slds-path__title"
                >
                  Merged
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<EpicStatusPath /> renders steps from epic status: merged 1`] = `
<div>
  <div
    class="slds-p-bottom_x-large"
  >
    <div
      class="slds-region_small"
    >
      <div
        class="slds-path"
      >
        <div
          class="slds-grid slds-path__track"
        >
          <ul
            aria-orientation="horizontal"
            class="slds-path__nav"
            role="listbox"
          >
            <li
              class="slds-path__item slds-is-complete"
              role="presentation"
            >
              <a
                aria-selected="false"
                class="slds-path__link progress-bar-item"
                id="path-0"
                role="option"
                tabindex="-1"
              >
                <span
                  class="slds-path__stage"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      class="slds-icon slds-icon_x-small slds-icon-text-default"
                    >
                      <use />
                    </svg>
                  </span>
                  <span
                    class="slds-assistive-text"
                  >
                    Stage Complete
                  </span>
                </span>
                <span
                  class="slds-path__title"
                >
                  Planned
                </span>
              </a>
            </li>
            <li
              class="slds-path__item slds-is-complete"
              role="presentation"
            >
              <a
                aria-selected="false"
                class="slds-path__link progress-bar-item"
                id="path-1"
                role="option"
                tabindex="-1"
              >
                <span
                  class="slds-path__stage"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      class="slds-icon slds-icon_x-small slds-icon-text-default"
                    >
                      <use />
                    </svg>
                  </span>
                  <span
                    class="slds-assistive-text"
                  >
                    Stage Complete
                  </span>
                </span>
                <span
                  class="slds-path__title"
                >
                  In progress
                </span>
              </a>
            </li>
            <li
              class="slds-path__item slds-is-complete"
              role="presentation"
            >
              <a
                aria-selected="false"
                class="slds-path__link progress-bar-item"
                id="path-2"
                role="option"
                tabindex="-1"
              >
                <span
                  class="slds-path__stage"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      class="slds-icon slds-icon_x-small slds-icon-text-default"
                    >
                      <use />
                    </svg>
                  </span>
                  <span
                    class="slds-assistive-text"
                  >
                    Stage Complete
                  </span>
                </span>
                <span
                  class="slds-path__title"
                >
                  Review
                </span>
              </a>
            </li>
            <li
              class="slds-path__item slds-is-current slds-is-active slds-is-won"
              role="presentation"
            >
              <a
                aria-selected="true"
                class="slds-path__link progress-bar-item"
                id="path-3"
                role="option"
                tabindex="0"
              >
                <span
                  class="slds-path__stage"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      class="slds-icon slds-icon_x-small slds-icon-text-default"
                    >
                      <use />
                    </svg>
                  </span>
                  <span
                    class="slds-assistive-text"
                  >
                    Current Stage:
                  </span>
                </span>
                <span
                  class="slds-path__title"
                >
                  Merged
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<EpicStatusPath /> renders steps from epic status: planned 1`] = `
<div>
  <div
    class="slds-p-bottom_x-large"
  >
    <div
      class="slds-region_small"
    >
      <div
        class="slds-path"
      >
        <div
          class="slds-grid slds-path__track"
        >
          <ul
            aria-orientation="horizontal"
            class="slds-path__nav"
            role="listbox"
          >
            <li
              class="slds-path__item slds-is-current slds-is-active"
              role="presentation"
            >
              <a
                aria-selected="true"
                class="slds-path__link progress-bar-item"
                id="path-0"
                role="option"
                tabindex="0"
              >
                <span
                  class="slds-path__stage"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      class="slds-icon slds-icon_x-small slds-icon-text-default"
                    >
                      <use />
                    </svg>
                  </span>
                  <span
                    class="slds-assistive-text"
                  >
                    Current Stage:
                  </span>
                </span>
                <span
                  class="slds-path__title"
                >
                  Planned
                </span>
              </a>
            </li>
            <li
              class="slds-path__item slds-is-incomplete"
              role="presentation"
            >
              <a
                aria-selected="false"
                class="slds-path__link progress-bar-item"
                id="path-1"
                role="option"
                tabindex="-1"
              >
                <span
                  class="slds-path__stage"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      class="slds-icon slds-icon_x-small slds-icon-text-default"
                    >
                      <use />
                    </svg>
                  </span>
                </span>
                <span
                  class="slds-path__title"
                >
                  In progress
                </span>
              </a>
            </li>
            <li
              class="slds-path__item slds-is-incomplete"
              role="presentation"
            >
              <a
                aria-selected="false"
                class="slds-path__link progress-bar-item"
                id="path-2"
                role="option"
                tabindex="-1"
              >
                <span
                  class="slds-path__stage"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      class="slds-icon slds-icon_x-small slds-icon-text-default"
                    >
                      <use />
                    </svg>
                  </span>
                </span>
                <span
                  class="slds-path__title"
                >
                  Review
                </span>
              </a>
            </li>
            <li
              class="slds-path__item slds-is-incomplete"
              role="presentation"
            >
              <a
                aria-selected="false"
                class="slds-path__link progress-bar-item"
                id="path-3"
                role="option"
                tabindex="-1"
              >
                <span
                  class="slds-path__stage"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      class="slds-icon slds-icon_x-small slds-icon-text-default"
                    >
                      <use />
                    </svg>
                  </span>
                </span>
                <span
                  class="slds-path__title"
                >
                  Merged
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<EpicStatusPath /> renders steps from epic status: pr opened 1`] = `
<div>
  <div
    class="slds-p-bottom_x-large"
  >
    <div
      class="slds-region_small"
    >
      <div
        class="slds-path"
      >
        <div
          class="slds-grid slds-path__track"
        >
          <ul
            aria-orientation="horizontal"
            class="slds-path__nav"
            role="listbox"
          >
            <li
              class="slds-path__item slds-is-complete"
              role="presentation"
            >
              <a
                aria-selected="false"
                class="slds-path__link progress-bar-item"
                id="path-0"
                role="option"
                tabindex="-1"
              >
                <span
                  class="slds-path__stage"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      class="slds-icon slds-icon_x-small slds-icon-text-default"
                    >
                      <use />
                    </svg>
                  </span>
                  <span
                    class="slds-assistive-text"
                  >
                    Stage Complete
                  </span>
                </span>
                <span
                  class="slds-path__title"
                >
                  Planned
                </span>
              </a>
            </li>
            <li
              class="slds-path__item slds-is-complete"
              role="presentation"
            >
              <a
                aria-selected="false"
                class="slds-path__link progress-bar-item"
                id="path-1"
                role="option"
                tabindex="-1"
              >
                <span
                  class="slds-path__stage"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      class="slds-icon slds-icon_x-small slds-icon-text-default"
                    >
                      <use />
                    </svg>
                  </span>
                  <span
                    class="slds-assistive-text"
                  >
                    Stage Complete
                  </span>
                </span>
                <span
                  class="slds-path__title"
                >
                  In progress
                </span>
              </a>
            </li>
            <li
              class="slds-path__item slds-is-complete"
              role="presentation"
            >
              <a
                aria-selected="false"
                class="slds-path__link progress-bar-item"
                id="path-2"
                role="option"
                tabindex="-1"
              >
                <span
                  class="slds-path__stage"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      class="slds-icon slds-icon_x-small slds-icon-text-default"
                    >
                      <use />
                    </svg>
                  </span>
                  <span
                    class="slds-assistive-text"
                  >
                    Stage Complete
                  </span>
                </span>
                <span
                  class="slds-path__title"
                >
                  Review
                </span>
              </a>
            </li>
            <li
              class="slds-path__item slds-is-current slds-is-active"
              role="presentation"
            >
              <a
                aria-selected="true"
                class="slds-path__link progress-bar-item"
                id="path-3"
                role="option"
                tabindex="0"
              >
                <span
                  class="slds-path__stage"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      class="slds-icon slds-icon_x-small slds-icon-text-default"
                    >
                      <use />
                    </svg>
                  </span>
                  <span
                    class="slds-assistive-text"
                  >
                    Current Stage:
                  </span>
                </span>
                <span
                  class="slds-path__title"
                >
                  Merged
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;
